--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/earnings",
       "schedule": "0 13 * * *"
+    },
+    {
+      "path": "/api/cron/earnings-weekly",
+      "schedule": "0 21 * * 5"
     }
   ]
 }
